force-app/main/default/objects/ares_notify__Notification__e/ares_notify__Notification__e.object-meta.xml
<CustomObject>
    <description>Describes a real-time notification that can be captured on the Lightning platform.  Allows to generate standard notifications and Chatter posts.</description>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>