force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__Body__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__Body__c</fullName>
    <description>Text to use as notification body.</description>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>