force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__ContextId__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__ContextId__c</fullName>
    <description>Identifier to assign to the notification</description>
    <label>Context Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>