force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__ConvertToChatterPost__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__ConvertToChatterPost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not you want to treat store the notification as a Chatter post</description>
    <label>Convert to Chatter Post</label>
    <type>Checkbox</type>
</CustomField>