force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__ConvertToStandardNotification__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__ConvertToStandardNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not you want to treat the notification as a standard Salesforce notification and have it appear in the Salesforce notification tray (in addition to the custom component).</description>
    <label>Convert to Standard Notification</label>
    <type>Checkbox</type>
</CustomField>