force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__IconName__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__IconName__c</fullName>
    <description>A SLDS icon name to use in the notification</description>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>