force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__RecipientId__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__RecipientId__c</fullName>
    <description>A Salesforce Id to send the notification to</description>
    <label>Recipient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>