force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__TargetId__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__TargetId__c</fullName>
    <description>A Salesforce Id to link the notification to, you will be redirected to specific record on click</description>
    <label>Target Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>