force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__TimeToLive__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__TimeToLive__c</fullName>
    <description>The number of seconds of the notification lifetime. Leave empty to keep the notification forever.</description>
    <label>Time To Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>