force-app/main/default/objects/ares_notify__Notification__e/fields/ares_notify__Title__c.field-meta.xml
<CustomField>
    <fullName>ares_notify__Title__c</fullName>
    <description>text to use as notification title.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>